discussion/kv_engine/150509/150509_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45495: wip: ProducerStreamIFace

Change-Id: I5f113d26828171a5f45de8a1495d4a5fafc7029d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-04-06 17:05:08.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-06 19:37:25.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8150/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer_stream_iface.h:42:18: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual void addStats(const AddStatFn& add_stat, const void* c) = 0;
    ~~~~~~~~     ^
                                                                    override 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer_stream_iface.h:49:17: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
    virtual cb::engine_errc seqnoAck(const std::string& consumerName,
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8150/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer_stream_iface.h:49:17:
error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8150/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29859/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34793/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6694/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9722/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10084/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9858/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17637/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8788/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
